--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
         <activity android:name=".AddRecipeActivity">
             <!-- Здесь могут быть дополнительные атрибуты и настройки активности -->
         </activity>
+        <activity android:name=".RecipeDetailActivity">
+        </activity>
+
 
     </application>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
