--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         </activity>
         <activity android:name=".RecipeDetailActivity">
         </activity>
+        <activity android:name=".EditRecipeActivity" />
 
 
     </application>
