--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,19 +24,22 @@
 
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddRecipeActivity">
-            <!-- Здесь могут быть дополнительные атрибуты и настройки активности -->
+
+        <activity android:name=".AddRecipeActivity" android:theme="@style/AppTheme.NoActionBar">
         </activity>
-        <activity android:name=".RecipeDetailActivity">
+
+        <activity android:name=".RecipeDetailActivity" android:theme="@style/AppTheme.NoActionBar">
         </activity>
-        <activity android:name=".EditRecipeActivity" />
+
+        <activity android:name=".EditRecipeActivity" android:theme="@style/AppTheme.NoActionBar">
+        </activity>
 
 
     </application>
